--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -4,7 +4,11 @@
 @import 'node_modules/react-modal-video/scss/modal-video.scss';
 @import '../../public/assets/scss/main.scss';
 
+
 @tailwind utilities;
+
+/* your global styles can follow here */
+
 
 /* your global styles below */
 
